--- a/_sass/settings/_variables.scss
+++ b/_sass/settings/_variables.scss
@@ -85,6 +85,7 @@ $max-width-layout-large: 1024px;
 $max-width-layout-x-large: 1130px;
 
 // Breakpoints
+$breakpoint-xx-large: 1400px;
 $breakpoint-x-large: 1200px;
 $breakpoint-large: 1024px;
 $breakpoint-medium: 768px;
